# megaglest-source

./: .gitattributes  .gitignore  .gitmodules  .travis-before_install.sh  .travis.xml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  README.txt  build-codeblocks-project.sh  build-eclipse-project.sh  build-mg-win32.sh  build-mg.bat  build-mg.sh  meson.build  tx-cleanup.sh
mk/linux/: .gitignore  AppImageSnapshotInstructions.txt  AppRun  Dockerfile  Jamfile  Jamrules  analyzeWorldSynch.sh  autogen.sh  build-appimage.sh  build-codeblocks-project.sh  build-eclipse-project.sh  build-mg-mingw.sh  build-mg.sh  configuration.xml  configurator  configure.ac  coverity-scan.sh  data  editor  formatTextFiles.sh  g3d_viewer  g3dviewer  git_update.sh  glest  glest-dev.ini  glest.ini  glest_game  glest_map_editor  glestkeys.ini  glestuser.ini  language_files_synch.pl  make-binary-archive.sh  make-data-archive.sh  makedata-diff.sh  makedata-source.sh  makedata.sh  makedeps_folder.sh  makerelease-embedded.sh  makerelease.sh  maps  (+37 more)
mk/linux/mojosetup/: .gitignore  .hgignore  .hgtags  CMakeLists.txt  LICENSE.txt  archive_pck.c  archive_pkg.c  archive_tar.c  archive_uz2.c  archive_zip.c  buildver.c  checksum_crc32.c  checksum_md5.c  checksum_sha1.c  docs.txt  fileio.c  fileio.h  gui.c  gui.h  gui_cocoa.m  gui_gtkplus2.c  gui_ncurses.c  gui_stdio.c  gui_www.c  lua_glue.c  lua_glue.h  miniz.c  miniz.h  mojosetup.c  platform.h  platform_beos.cpp  platform_unix.c  platform_windows.c  stb_image.c  universal.h
mk/linux/tools-for-standalone-client/: .gitignore  megaglest-configure-desktop.sh  prepare-mini-update.sh  start_megaglest  start_megaglest_g3dviewer
mk/macosx/: .gitignore  CMakeLists.txt  Info.plist  PkgInfo  build-mg.sh  clean.sh  glest-dev.ini  glest.ini  make-binary-archive.sh  make-release-archives.sh  start_headless_gameserver.sh
mk/macosx/bundle_resources/: Info.plist.in  MegaGlest.sh
source/configurator/: CMakeLists.txt  configuration.cpp  configuration.h  main.cpp  main.h
source/g3d_viewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  main.h  main.ui  meson.build  renderer.cpp  renderer.h
source/glest_game/: CMakeLists.txt  Doxyfile  meson.build
source/glest_game/ai/: IntrHashSet.hpp  IntrHeapHash.hpp  ai.cpp  ai.h  ai_interface.cpp  ai_interface.h  ai_rule.cpp  ai_rule.h  annotated_map.cpp  annotated_map.h  cartographer.cpp  cartographer.h  cluster_map.cpp  cluster_map.h  fast_path_finder.cpp  fast_path_finder.h  influence_map.h  node_map.cpp  node_map.h  node_pool.cpp  node_pool.h  path_finder.cpp  path_finder.h  route_planner.cpp  route_planner.h  search_engine.h  search_functions.inl
source/glest_game/facilities/: .gitignore  auto_test.cpp  auto_test.h  components.cpp  components.h  game_util.cpp  game_util.h  logger.cpp  logger.h  pos_iterator.cpp  pos_iterator.h
source/glest_game/game/: achievement.cpp  achievement.h  chat_manager.cpp  chat_manager.h  commander.cpp  commander.h  console.cpp  console.h  game.cpp  game.h  game_camera.cpp  game_camera.h  game_constants.h  game_settings.h  script_manager.cpp  script_manager.h  stats.cpp  stats.h
source/glest_game/global/: config.cpp  config.h  core_data.cpp  core_data.h  lang.cpp  lang.h  metrics.cpp  metrics.h
source/glest_game/graphics/: debug_renderer.cpp  debug_renderer.h  particle_type.cpp  particle_type.h  renderer.cpp  renderer.h  unit_particle_type.cpp  unit_particle_type.h
source/glest_game/gui/: display.cpp  display.h  gui.cpp  gui.h  megaglest_cegui_manager.cpp  megaglest_cegui_manager.h  selection.cpp  selection.h
source/glest_game/main/: battle_end.cpp  battle_end.h  intro.cpp  intro.h  macosx_main.h  macosx_main.m  main.cpp  main.h  program.cpp  program.h
source/glest_game/menu/: main_menu.cpp  main_menu.h  menu_background.cpp  menu_background.h  menu_state_about.cpp  menu_state_about.h  menu_state_connected_game.cpp  menu_state_connected_game.h  menu_state_custom_game.cpp  menu_state_custom_game.h  menu_state_graphic_info.cpp  menu_state_graphic_info.h  menu_state_join_game.cpp  menu_state_join_game.h  menu_state_keysetup.cpp  menu_state_keysetup.h  menu_state_load_game.cpp  menu_state_load_game.h  menu_state_masterserver.cpp  menu_state_masterserver.h  menu_state_mods.cpp  menu_state_mods.h  menu_state_new_game.cpp  menu_state_new_game.h  menu_state_options.cpp  menu_state_options.h  menu_state_options_graphics.cpp  menu_state_options_graphics.h  menu_state_options_network.cpp  menu_state_options_network.h  menu_state_options_sound.cpp  menu_state_options_sound.h  menu_state_root.cpp  menu_state_root.h  menu_state_scenario.cpp  menu_state_scenario.h  server_line.cpp  server_line.h
source/glest_game/network/: client_interface.cpp  client_interface.h  connection_slot.cpp  connection_slot.h  masterserver_info.h  network_interface.cpp  network_interface.h  network_manager.cpp  network_manager.h  network_message.cpp  network_message.h  network_protocol.cpp  network_protocol.h  network_types.cpp  network_types.h  server_interface.cpp  server_interface.h
source/glest_game/sound/: sound_container.cpp  sound_container.h  sound_renderer.cpp  sound_renderer.h
source/glest_game/steam/: steam.cpp  steam.h
source/glest_game/steamshim/: steamshim_child.c  steamshim_child.h
source/glest_game/type_instances/: command.cpp  command.h  faction.cpp  faction.h  object.cpp  object.h  resource.cpp  resource.h  unit.cpp  unit.h  upgrade.cpp  upgrade.h
source/glest_game/types/: command_type.cpp  (+23 more)
source/glest_map_editor/: CMakeLists.txt  about.ui  advanced.cpp  advanced.h  advanced.hpp  advanced.ui  help.ui  icons.h  icons.qrc  info.cpp  info.h  info.hpp  info.ui  main.cpp  main.h  main.ui  mainWindow.cpp  mainWindow.h  mainWindow.hpp  mainWindow.ui  map.cpp  map.h  mapManipulator.cpp  mapManipulator.h  mapManipulator.hpp  meson.build  newMap.cpp  newMap.h  newMap.hpp  newMap.ui  newmap.cpp  newmap.h  newmap.ui  player.cpp  player.hpp  program.cpp  program.h  renderer.cpp  renderer.h  renderer.hpp  (+14 more)
source/shared_lib/: CMakeLists.txt  meson.build
source/tests/: CMakeLists.txt  test_runner.cpp
(+1786 files in other folders)
